# SoniCpp

./: .gitignore  CMakeLists.txt  README.md
src/: Attributes.h  Engine.cpp  Engine.h  Error.cpp  Error.h  Fixed.h  GameMode.h  Main.cpp  VDP.cpp  VDP.h
src/Backend/: Core.h  Event.h  Render.h
src/Backend/SDL2/: Core.cpp  Core.h  Event.cpp  Event.h  Render.cpp  Render.h
src/Game/: GameMode.cpp  GameMode.h  Level.cpp  Level.h  Mappings.h  Object.h  ObjectBase.cpp  ObjectBase.h
src/Level/: GameMode.cpp  GameMode.h
